force-app/main/default/objects/Survey__c/Survey__c.object-meta.xml
<CustomObject>
    <description>The Survey object represents the questionnaire itself. It stores the name, description, logo of the questionnaire, and a link to the next poll in the chain, as well as a link to its form. An additional field is a checkbox responsible for whether the survey is standard.</description>
    <label>Survey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>