force-app/main/default/objects/Survey__c/fields/Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Background_Color__c</fullName>
    <description>The background color of the survey.</description>
    <label>Background Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>