force-app/main/default/objects/Survey__c/fields/Guest_URL__c.field-meta.xml
<CustomField>
    <fullName>Guest_URL__c</fullName>
    <description>URL for Guest Users</description>
    <label>Guest URL</label>
    <type>Url</type>
</CustomField>