force-app/main/default/objects/Survey__c/fields/IsResending__c.field-meta.xml
<CustomField>
    <fullName>IsResending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsResending</label>
    <type>Checkbox</type>
</CustomField>