force-app/main/default/objects/Survey__c/fields/IsStandard__c.field-meta.xml
<CustomField>
    <fullName>IsStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the survey is available for reuse.</description>
    <label>IsStandard</label>
    <type>Checkbox</type>
</CustomField>