force-app/main/default/objects/Survey__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ссылка на следующий опрос в цепочке.</description>
    <label>Related To</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>