force-app/main/default/objects/Survey__c/validationRules/Color_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Color_check</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX( Background_Color__c , &quot;^#([a-fA-F0-9]{3}|[a-fA-F0-9]{6})$&quot;))</errorConditionFormula>
    <errorDisplayField>Background_Color__c</errorDisplayField>
    <errorMessage>You have to input color in hexadecimal format</errorMessage>
</ValidationRule>