force-app/main/default/objects/Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>URL__c</columns>
    <columns>Logo__c</columns>
    <columns>Background_Color__c</columns>
    <columns>IsStandard__c</columns>
    <columns>IsResending__c</columns>
    <columns>Related_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>